crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__reduce-reactive-deps__memberexpr-join-optional-chain.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/reduce-reactive-deps/memberexpr-join-optional-chain.ts
---
import { c as _c } from "react/compiler-runtime";
// @enablePropagateDepsInHIR
// To preserve the nullthrows behavior and reactive deps of this code,
// Forget needs to add `props.a.b` or a subpath as a dependency.
//
// (1) Since the reactive block producing x unconditionally read props.a.<...>,
//     reading `props.a.b` outside of the block would still preserve nullthrows
//     semantics of source code
// (2) Technically, props.a, props.a.b, and props.a.b.c are all reactive deps.
//     However, `props.a?.b` is only dependent on whether `props.a` is nullish,
//     not its actual value. Since we already preserve nullthrows on `props.a`,
//     we technically do not need to add `props.a` as a dependency.
function Component(props) {
	const $ = _c(2);
	let x;
	if ($[0] !== props.a.b) {
		x = [];
		x.push(props.a?.b);
		x.push(props.a.b.c);
		$[0] = props.a.b;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ a: { b: { c: 1 } } }]
};
