crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__reduce-reactive-deps__memberexpr-join-optional-chain2.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/reduce-reactive-deps/memberexpr-join-optional-chain2.ts
---
import { c as _c } from "react/compiler-runtime";
// @enablePropagateDepsInHIR
function Component(props) {
	const $ = _c(5);
	let x;
	if ($[0] !== props.items?.edges || $[1] !== props.items?.length) {
		x = [];
		x.push(props.items?.length);
		let t0;
		if ($[3] !== props.items?.edges) {
			t0 = props.items?.edges?.map?.(render)?.filter?.(Boolean) ?? [];
			$[3] = props.items?.edges;
			$[4] = t0;
		} else {
			t0 = $[4];
		}
		x.push(t0);
		$[0] = props.items?.edges;
		$[1] = props.items?.length;
		$[2] = x;
	} else {
		x = $[2];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ items: {
		edges: null,
		length: 0
	} }]
};
