crates/oxc_react_compiler/tests/snapshots/propagate-scope-deps-hir-fork__reduce-reactive-deps__promote-uncond.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/propagate-scope-deps-hir-fork/reduce-reactive-deps/promote-uncond.js
---
import { c as _c } from "react/compiler-runtime";
// @enablePropagateDepsInHIR
// When a conditional dependency `props.a.b.c` has no unconditional dependency
// in its subpath or superpath, we should find the nearest unconditional access
import { identity } from "shared-runtime";
// and promote it to an unconditional dependency.
function usePromoteUnconditionalAccessToDependency(props, other) {
	const $ = _c(4);
	let x;
	if ($[0] !== other || $[1] !== props.a.a.a || $[2] !== props.a.b) {
		x = {};
		x.a = props.a.a.a;
		if (identity(other)) {
			x.c = props.a.b.c;
		}
		$[0] = other;
		$[1] = props.a.a.a;
		$[2] = props.a.b;
		$[3] = x;
	} else {
		x = $[3];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: usePromoteUnconditionalAccessToDependency,
	params: [{ a: { a: { a: 3 } } }, false]
};
